feat: rename :tree-shake to :tree-shake? and document it